-- ircd-hybrid-8.1.0beta2 Release Notes
o) "STATS s" now shows configured services{} blocks as well
o) Fixed broken compile with libGeoIP disabled
o) Code cleanups; working towards stabilization and improved performance


-- ircd-hybrid-8.1.0beta1 Release Notes
########################################################################
o) IMPORTANT: name/channel entries can't be stacked any longer within
   a single resv{} block. Each entry now requires its own resv{} block.
   Read doc/reference.conf for more details
#######################################################################
o) Added resv::exempt configuration option. Exempt can be either a
   ISO 3166 alpha-2 two letter country code, or a nick!user@host mask.
   CIDR is supported
o) Removed channel::restrict_channels configuration option
o) Preliminary libGeoIP support. Currently only used for exempt entries
   in resv{} blocks
o) Improved WEBIRC authentication; added 'webirc' to auth::flags.
   A "webirc." spoof is now no longer required
o) Implemented new memory pool allocator which basically is based upon Tor's
   mempool allocator for Tor cells
o) Major code cleanups
o) Implemented new binary database storage for X-,D-,K-,G-Lines and RESVs.
   Temporary bans are now stored as well and will persist after a reboot
o) Channel based resv{} blocks may now contain wildcards
o) NICK/JOIN now shows the actual reason of reserved nick-/channelnames
o) contrib/ and its content has been removed from the tree
o) Added serverhide::hide_services configuration option
o) Added 'nononreg' (+R) to oper::umodes and general::oper_only_modes
o) Added support for "away-notify" client capability


-- ircd-hybrid-8.0.7 Release Notes
o) Services may now set a channel topic without joining the channel first
o) Fixed bug where /whois would send empty sockhost information on TS5
   servers
o) Remote server connection and split notices now go to new usermode +e.
   These previously used usermode +x.