@@ -2,6 +2,7 @@
 o) "STATS s" now shows configured services{} blocks as well
 o) Fixed broken compile with libGeoIP disabled
 o) Code cleanups; working towards stabilization and improved performance
+o) Changed RPL_WELCOME to comply with rfc2812
 
 
 -- ircd-hybrid-8.1.0beta1 Release Notes
